2003-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* ssl.m4: add -R option for shared ssl lib.

2002-03-13  Arkadiusz Miskiewicz <misiek@pld.org.pl>

	* Makefile.am: distribute va_copy.m4

2002-03-03  Alexander V. Lukyanov <lav@yars.free.net>

	* va_copy.m4: fix copy-by-value test; use VA_ZZZ_COPY tag for
	  proper autoheader sorting; don't do unneeded tests.

2002-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* needtrio.m4: define TRIO_REPLACE_STDIO instead of NEED_TRIO.

2001-12-05	Glenn Maynard <g_ld@zewt.org>

	* gnu-source.m4: new file.
	* needtrio.m4: add missing def.
	* va_copy.m4: Add copy-by-value test; always either define VA_LIST
	  or fail during autoconf.

**** some events missed

2000-12-18	Joerg Dorchain <jd@europeonline.net>

	* ssl.m4: look for ssl library in $prefix.